--- a/productPage.html
+++ b/productPage.html
@@ -522,6 +522,39 @@
         </div>
         <!--success-->
 
+        <!--verify phonenumber modal-->
+        <div class="modal fade modal-top modal-dialog" id="verifyCode" tabindex="-1" role="dialog" aria-labelledby="verifyCode" aria-hidden="true" data-backdrop="static" data-keyboard="false" style="width:200px;">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-body mx-3 text-center">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-8">
+                                    <div class="modal-body mx-3">
+                                        <p><strong class=" text-dark">Code</strong></p>
+                                        <div class="text-center">
+                                            <input type="tel" class="form-control" id="codeVI" name="codeVI" required autocomplete="off">
+                                        </div>
+                                    </div>
+                                    
+                                </div>
+                                <div class="col-4">
+                                    <button type="button" class="btn btn-md btn-outline-success waves-effect ml-auto" id="codeVIB">submit</button>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <div class="mx-auto" id="codeSuccessInd"></div>
+                                </div>
+                            </div>
+                        </div>
+  
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--verify phonenumber modal-->
+
             <!--footer-->
     <footer class="page-footer font-small unique-color-dark mt-4">
 
